# wafan

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-tests.yml
rules/: 01-subsumption-basic.conf  02-subsumption-transforms.conf  03-disjoint-rules.conf  04-mixed-variables.conf  05-negated-operators.conf  06-complex-patterns.conf  07-htmlentitydecode.conf  08-urldecode.conf
tests/: test_analysis.py  test_cli.py  test_default_action.py  test_e2e.py  test_parser.py  test_smt.py  test_solver_setup.py
tests/data/: default_action.conf  subsumption.conf
wafan/: __main__.py  analysis.py  parser.py  smt.py  solver_setup.py
wafan.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
wafan/analyses/: __init__.py  common.py  intersection.py  solver.py  subsumption.py  witness.py
wafan/transforms/: __init__.py  html_entity_decode.py  url_decode.py  url_decode_uni.py
