[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wafan"
version = "0.1.0"
description = "SMT-based analysis of WAF ModSecurity SecRule rulesets"
requires-python = ">=3.10"
dependencies = [
    "msc-pyparser>=1.2",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.pytest.ini_options]
testpaths = ["tests"]
